Revision history for perl distribution Mojolicious-Plugin-OAuth2

2.02 Not Released
 - Add support for passing in custom "ua"
 - Add support for "providers" key in plugin config

2.01 2021-10-28T18:29:45+0900
 - Test suite is compatible with older versions of Mojolicious
 - OpenID Connect require Mojo::JWT 0.09

2.00 2021-10-27T19:36:44+0900
 - Removed $c->oauth2->get_token()
   https://github.com/marcusramberg/Mojolicious-Plugin-OAuth2/blob/07e214eb556093de8691b145116b60ab64a4a21a/t/delayed.t#L23-L28
 - Add support for "OpenID Connect" #65
   Contributor: Roy Storey
 - Add "debian_salsa" as an OAuth2 id provider #62
   Contributor: Gregor Herrmann
 - Moved mock code to Mojolicious::Plugin::OAuth2::Mock
 - Bumped Mojolicious version to 8.25

1.59 2021-02-17T08:33:17+0900
 - Fix invalid "=item" in documentation.
 - Compatible with Mojolicious 9.0 #61
   Contributor: Joel Berger

1.58 2019-07-03T14:22:38+0200
 - Add new Oauth2 providers: instagram.com
 - Add new Oauth2 providers: vk.com

1.57 2018-09-24T10:54:40+0200
 - 1.56 was broken because of an error in a pre-release git ship version.

1.56 2018-09-24T00:03:28+0200
 - Restore response_type to google authorize url.

1.55 2018-09-08T20:29:56+0200
 - Made it possible to disable automatic redirect

1.54 2018-08-30T12:48:19+0200
 - Add oauth2.get_token_p() helper
 - Compatible with Mojolicious 7.90 #53
 - Removed deprecated helper get_authorize_url()
 - Removed deprecated helper get_token()

1.53 2015-09-08T09:27:17Z
 - Removed fix_get_token hack
 - Documented deprecation for get_authorize_url() and get_token()
 - Fix documentation regarding return value to oauth2->get_token() #45
 - Fix liftetime isn't a valid paramater in mocked response #47
 - Add more data to mocked response #47

1.52 2015-04-06T22:45:17Z
 - Add oauth2->get_token() works in blocking mode (Alexander Karelas)

1.51 2015-03-18T17:38:19Z
 - Fix get_token() need to return the whole data structure to the callback
   and not just $token.
